fixed some CSS and wrap options

--- a/draft.css
+++ b/draft.css
@@ -35,6 +35,7 @@ div .draft-editor {
 
 div .draft-editor-buttons {
   display: flex;
+  flex-wrap: wrap;
   border-bottom: solid 1px rgba(0, 0, 0, .16);
 }
 
@@ -84,6 +85,14 @@ div.prompt-text-editor {
 div.prompt-text-editor a {
   margin-left: 1em;
   cursor: pointer;
+}
+
+div.prompt-text-editor input {
+  width: 100%;
+  border: none;
+  border-bottom: solid 1px rgba(0, 0, 0, .16);
+  outline: none;
+  margin-bottom: 1em;
 }
 
 div.location-container {
